Add a dedicated operator for table functions
Table functions are not tables, so we shouldn't treat them as such.

Making table functions more concrete will later on allow us to:

- Get rid of the `createTableInfo` and instead utilize the returnType to
  remove the redundancy that we have there.

- Get rid of the `RelationName`. There is also a redundancy there. There
  is also a `FunctionName` that contains the same information.