@@ -45,6 +45,7 @@ import io.crate.metadata.RelationName;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
@@ -175,7 +176,7 @@ public class TableIdentsExtractor {
 
         @Override
         public Collection<RelationName> visitTableFunctionRelation(TableFunctionRelation tableFunctionRelation, Void context) {
-            return Collections.singletonList(tableFunctionRelation.tableInfo().ident());
+            return List.of();
         }
 
         @Override
